--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,6 +45,9 @@ jobs:
       - name: 💄 Check formatting
         run: bun format:check
 
+      - name: 🏗 Build
+        run: bun run build
+
       - name: 📑 Setup Pages
         uses: actions/configure-pages@v5
 
